syntax = "proto3";

package com.github.szgabsz91.morpher.methods.api.protocolbuffers;

option java_multiple_files = true;
option java_package = "com.github.szgabsz91.morpher.methods.api.protocolbuffers";
option java_outer_classname = "MethodCoreProtocolBuffers";

message CharacterMessage {
    string type = 1;
    repeated string attribute = 2;
    string letter = 3;
}
